--- a/demo/index.html
+++ b/demo/index.html
@@ -11,16 +11,16 @@
     <script>
         // 整数
         console.info('整数');
-        console.log(calc.add(3,4))
-        console.log(calc.sub(3,4))
-        console.log(calc.mult(3,4))
-        console.log(calc.divi(3,4))
+        console.log(calculate.add(3,4))
+        console.log(calculate.sub(3,4))
+        console.log(calculate.mult(3,4))
+        console.log(calculate.divi(3,4))
         // 浮点数
         console.info('浮点数');        
-        console.log(calc.add(3.0,4.2))
-        console.log(calc.sub(3.1,4.5))
-        console.log(calc.mult(3.1,4.1))
-        console.log(calc.divi(3.0,4))   
+        console.log(calculate.add(3.0,4.2))
+        console.log(calculate.sub(3.1,4.5))
+        console.log(calculate.mult(3.1,4.1))
+        console.log(calculate.divi(3.0,4))   
     </script>
 </body>
 </html>
