--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="../calculation-js.js"></script>
+    <script src="../calc.min.js"></script>
     <script>
         // 整数
         console.info('整数');
